--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve": "^11.3.2"
   },
   "scripts": {
+    "start": "serve -s build",
     "devstart": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
